--- a/a/index.html
+++ b/a/index.html
@@ -1,1 +1,37 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Avik Sripathi | Content Creator</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <img src="https://github.com/a2s8.png" alt="Avik" class="profile-pic">
+            <h1>Avik Sripathi</h1>
+            <p class="bio">Level 8 Human 🎮 | Reel Creator | Snack Reviewer</p>
+            
+            <div class="social-links">
+                <a href="https://www.youtube.com/@aviksripathi" target="_blank">YouTube</a>
+                <a href="https://www.instagram.com/aviksripathi/" target="_blank">Instagram</a>
+            </div>
+        </header>
+
+        <section class="content-grid">
+            <h2>Latest Content</h2>
+            
+            <div class="video-wrapper">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed?listType=user_uploads&list=aviksripathi" frameborder="0" allowfullscreen></iframe>
+            </div>
+
+            <p>Check out my latest Reels on Instagram!</p>
+            <div class="insta-placeholder">
+                <a href="https://www.instagram.com/aviksripathi/reels/" class="btn">View My Reels</a>
+            </div>
+        </section>
+    </div>
+</body>
+</html>
