Shorten name from 'Avik Sripathi' to 'Avik S'

--- a/a/index.html
+++ b/a/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avik Sripathi | Content Creator</title>
+    <title>Avik S | Content Creator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <img src="https://github.com/a2s8.png" alt="Avik" class="profile-pic">
-            <h1>Avik Sripathi</h1>
+            <h1>Avik S</h1>
             <p class="bio">Level 8 Human 🎮 | Reel Creator | Snack Reviewer</p>
             
             <div class="social-links">
