--- a/toy1/index.html
+++ b/toy1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magic Chameleon | Sripathi Experiments</title>
+    <title>Magic Chameleon | Product Preview</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -29,12 +29,12 @@
         .hero {
             width: 100%;
             max-width: 600px;
-            padding: 40px 20px 0;
+            padding: 40px 20px 20px;
             text-align: center;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2.2rem;
             font-weight: 800;
             margin-bottom: 10px;
             background: linear-gradient(to right, #4ade80, #22c55e);
@@ -42,121 +42,145 @@
             -webkit-text-fill-color: transparent;
         }
 
-        .subtitle {
-            color: var(--text-muted);
-            font-size: 1.1rem;
-            margin-bottom: 30px;
-        }
-
         .video-container {
             position: relative;
             width: 100%;
-            max-width: 350px;
-            margin: 0 auto;
+            max-width: 320px;
+            margin: 0 auto 30px;
             aspect-ratio: 9 / 16;
             border-radius: 20px;
             overflow: hidden;
-            box-shadow: 0 20px 40px -10px rgba(34, 197, 94, 0.3);
-            border: 4px solid var(--card-bg);
+            box-shadow: 0 20px 40px -10px rgba(0,0,0,0.5);
+            border: 3px solid var(--card-bg);
         }
 
         iframe { width: 100%; height: 100%; border: none; }
 
+        /* --- PRODUCT PREVIEW CARD --- */
+        .product-preview {
+            background: #ffffff; /* Light background to make the product pop */
+            color: #1a1a1a;
+            width: 90%;
+            max-width: 400px;
+            border-radius: 16px;
+            padding: 20px;
+            margin-bottom: 40px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            text-decoration: none;
+            transition: transform 0.2s;
+        }
+
+        .product-preview:hover { transform: scale(1.02); }
+
+        .product-label {
+            align-self: flex-start;
+            background: #f0f0f0;
+            padding: 4px 10px;
+            border-radius: 4px;
+            font-size: 0.7rem;
+            font-weight: 700;
+            color: #666;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+        }
+
+        .product-info { text-align: center; }
+
+        .product-title {
+            font-weight: 700;
+            font-size: 1.1rem;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        .product-rating { color: #ffa41c; font-size: 0.9rem; margin-bottom: 15px; }
+
+        .btn-amazon {
+            background: var(--amazon-orange);
+            color: #000;
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-weight: 700;
+            text-decoration: none;
+            width: 100%;
+            text-align: center;
+            display: block;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        /* --- CONTENT GRID --- */
         .content-grid {
             width: 90%;
             max-width: 800px;
             display: grid;
             grid-template-columns: 1fr;
-            gap: 30px;
-            margin: 50px 0;
+            gap: 20px;
+            margin-bottom: 50px;
         }
 
         .card {
             background: var(--card-bg);
-            padding: 30px;
+            padding: 25px;
             border-radius: 16px;
             border: 1px solid rgba(255,255,255,0.05);
         }
 
-        h2 { margin-top: 0; color: var(--accent-green); font-size: 1.5rem; display: flex; align-items: center; gap: 10px; }
-        p { line-height: 1.6; color: var(--text-muted); }
+        h2 { margin-top: 0; color: var(--accent-green); font-size: 1.3rem; }
+        p { line-height: 1.6; color: var(--text-muted); font-size: 0.95rem; }
 
-        .btn-container {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            align-items: center;
-            margin-top: 20px;
-            width: 100%;
-        }
-
-        .btn {
-            padding: 16px 32px;
+        .btn-secondary {
+            background: rgba(255,255,255,0.1);
+            color: #fff;
+            padding: 12px 24px;
             border-radius: 50px;
             text-decoration: none;
-            font-weight: 700;
-            transition: all 0.2s;
-            display: inline-block;
-            text-align: center;
-            min-width: 250px;
+            margin-bottom: 50px;
+            font-size: 0.9rem;
         }
 
-        /* Amazon Themed Button */
-        .btn-amazon {
-            background: var(--amazon-orange);
-            color: #232f3e;
-            box-shadow: 0 4px 15px rgba(255, 153, 0, 0.3);
-        }
-
-        .btn-primary { background: var(--accent-green); color: #064e3b; }
-        .btn-secondary { background: rgba(255,255,255,0.1); color: #fff; margin-top: 20px; }
-        .btn:hover { transform: translateY(-3px); opacity: 0.9; }
-
-        footer { margin: 40px 0; opacity: 0.6; font-size: 0.9rem; text-align: center; }
-        footer a { color: var(--text-main); text-decoration: none; }
-
-        @media (min-width: 768px) {
-            .content-grid { grid-template-columns: 1fr 1fr; }
-            .btn-container { flex-direction: row; justify-content: center; }
-        }
+        footer { margin-bottom: 40px; opacity: 0.6; font-size: 0.8rem; text-align: center; }
     </style>
 </head>
 <body>
 
     <div class="hero">
         <h1>The Magic Chameleon 🦎</h1>
-        <p class="subtitle">Watch it change from dark to light green instantly!</p>
         
         <div class="video-container">
             <iframe src="https://www.youtube.com/embed/BuYSO9RfCiM" allowfullscreen></iframe>
         </div>
+
+        <a href="https://amzn.to/4rc3kZg" class="product-preview" target="_blank">
+            <span class="product-label">Amazon Recommendation</span>
+            <div class="product-info">
+                <span class="product-title">Color Changing Chameleon Toy</span>
+                <div class="product-rating">★★★★★ (4.8/5)</div>
+                <div class="btn-amazon">Check Price on Amazon</div>
+            </div>
+        </a>
     </div>
 
     <div class="content-grid">
         <div class="card">
-            <h2>🎁 The Story</h2>
-            <p>I got this chameleon from my class <strong>Valentine's Day gift exchange</strong>. It was the coolest gift in the room!</p>
-            <p><strong>Question:</strong> What should I name him? Let me know in the YouTube comments!</p>
+            <h2>🔬 How it works</h2>
+            <p>This toy uses <b>Thermochromism</b>. Special pigments in the paint react to temperature changes, causing the lizard to "camouflage" instantly in water!</p>
         </div>
 
         <div class="card">
-            <h2>🔬 The Science</h2>
-            <p>This is called <strong>Thermochromism</strong>. The paint contains heat-sensitive molecules that change shape when the temperature shifts!</p>
+            <h2>🎁 Gift Origin</h2>
+            <p>Found during a class Valentine's Day exchange. It's a great example of science hidden in a simple toy!</p>
         </div>
     </div>
 
-    <div class="btn-container">
-        <a href="https://amzn.to/4rc3kZg" class="btn btn-amazon" target="_blank">🛒 Get Your Own Magic Lizard</a>
-        
-        <a href="https://www.youtube.com/@aviksripathi?sub_confirmation=1" class="btn btn-primary" target="_blank">🚀 Subscribe for More</a>
-    </div>
-
-    <a href="/" class="btn btn-secondary">&larr; Back to Home</a>
+    <a href="/" class="btn-secondary">&larr; Back to Home</a>
 
     <footer>
-        &copy; 2026 Sripathi Family • <a href="/">sripathi.one</a>
-        <div style="margin-top: 15px; opacity: 0.8;">
-            <img id="visit-count" src="" alt="Views" style="height: 20px;">
+        &copy; 2026 sripathi.one
+        <div style="margin-top: 15px;">
+            <img id="visit-count" src="" alt="Views" style="height: 18px;">
         </div>
     </footer>
 
